--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,7 +1,4 @@
-# ???(console)
-log4j.appender.console = org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold = INFO
-log4j.appender.console.ImmediateFlush = true
-log4j.appender.console.Target = System.err
-log4j.appender.console.layout = org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern = % d{yyyy - MM - dd HH:mm:ss} [ % p]  % m % n
+log4j.rootLogger=debug, stdout 
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-p %l %m%n
